--- a/arch/arm64/boot/dts/qcom/trinket-sde.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-sde.dtsi
@@ -177,6 +177,7 @@
 
 		qcom,sde-qos-cpu-mask = <0x3>;
 		qcom,sde-qos-cpu-dma-latency = <43>;
+		qcom,sde-qos-cpu-irq-latency = <43>;
 
 		/* offsets are relative to "mdp_phys + qcom,sde-off */
 
